# BigInteger-Library-Using-C

./: .gitignore  CMakeLists.txt  P1_1210145_yazanAboAlown_3.c  README.md  bigint.c  bigint.h  conan_provider.cmake  conandata.yml  main.c
Arithmetic/: add.c  arithmetic.c  arithmetic.h  division.c  subtract.c
LinkedList/: LinkedList.c  LinkedList.h
cmake/: tests.cmake
include/: bigint.h
src/arithmetic/: add.c  arithmetic.c  arithmetic.h  division.c  multiplication.c  subtract.c
src/core/: bigint.c
src/utils/: LinkedList.c  LinkedList.h
tests/: CMakeLists.txt  test.c
tests/integration/: CMakeLists.txt  test_bigint_integration.cpp
tests/performance/: test_bigint_performance.cpp
tests/unit/: CMakeLists.txt  test_bigint_arithmetic.cpp  test_bigint_core.cpp  test_linkedlist.cpp
